unpackaged/main/default/objects/Account/fields/Account_ID_18_Text_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_Text_Code__c</fullName>
    <label>Account ID (18) Text (Code)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>