unpackaged/main/default/objects/Account/fields/Account_New__c.field-meta.xml
<CustomField>
    <fullName>Account_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New account name</description>
    <inlineHelpText>New account name</inlineHelpText>
    <label>Account New</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account New)</relationshipLabel>
    <relationshipName>oldaccounts</relationshipName>
    <type>Lookup</type>
</CustomField>