unpackaged/main/default/objects/Account/fields/Account_Old__c.field-meta.xml
<CustomField>
    <fullName>Account_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the sold account</description>
    <inlineHelpText>Name of the sold account</inlineHelpText>
    <label>Account Old</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Old)</relationshipLabel>
    <relationshipName>newaccounts</relationshipName>
    <type>Lookup</type>
</CustomField>