unpackaged/main/default/objects/Account/fields/Account_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Description__c</fullName>
    <label>Account Source Description</label>
    <type>TextArea</type>
</CustomField>