unpackaged/main/default/objects/Account/fields/Accounting_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Invoice_Name__c</fullName>
    <description>A field for accounting&#39;s use to add an internal name for a Company to the Invoice.</description>
    <label>Accounting Invoice Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>