unpackaged/main/default/objects/Account/fields/Active_OnDemand_Client__c.field-meta.xml
<CustomField>
    <fullName>Active_OnDemand_Client__c</fullName>
    <label>Active OnDemand Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>