unpackaged/main/default/objects/Account/fields/Address_Single_Line_Form__c.field-meta.xml
<CustomField>
    <fullName>Address_Single_Line_Form__c</fullName>
    <formula>SUBSTITUTE( ShippingStreet ,SUBSTITUTE($Label.lineBreak, &quot;-&quot;, &quot;&quot;),&quot;, &quot;) + &quot;, &quot; 
+ ShippingCity + &quot;, &quot;
+ ShippingState + &quot; &quot;
+ ShippingCountry + &quot; &quot;
+ ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Single Line Form</label>
    <type>Text</type>
</CustomField>