unpackaged/main/default/objects/Account/fields/Alternate_Names__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Names__c</fullName>
    <description>Please list any alternate names, to include DBA names, that this account may be using.</description>
    <inlineHelpText>Please list any alternate names, to include DBA names, that this account may be using.</inlineHelpText>
    <label>Alternate Names</label>
    <type>TextArea</type>
</CustomField>