unpackaged/main/default/objects/Account/fields/aXcessa_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>aXcessa_Client_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to evaluate if this account has an aXcessa store for the WinMaster INtegration</description>
    <label>aXcessa Client (Code)</label>
    <type>Checkbox</type>
</CustomField>