unpackaged/main/default/objects/Account/fields/BHPH__c.field-meta.xml
<CustomField>
    <fullName>BHPH__c</fullName>
    <label>BHPH</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>CAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>