unpackaged/main/default/objects/Account/fields/Buy_Here_Pay_Here__c.field-meta.xml
<CustomField>
    <fullName>Buy_Here_Pay_Here__c</fullName>
    <label>Buy Here Pay Here</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>