unpackaged/main/default/objects/Account/fields/Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account was a part of a Buy or Sell</description>
    <inlineHelpText>Account was a part of a Buy or Sell</inlineHelpText>
    <label>Buy/Sell</label>
    <type>Checkbox</type>
</CustomField>