unpackaged/main/default/objects/Account/fields/Buy_Sell_Comments__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell_Comments__c</fullName>
    <label>Buy / Sell Comments</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>