unpackaged/main/default/objects/Account/fields/Buy_Sell_Initial_Task_Complete__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell_Initial_Task_Complete__c</fullName>
    <label>Buy / Sell Initial Task Complete</label>
    <type>Date</type>
</CustomField>