unpackaged/main/default/objects/Account/fields/BuySellType__c.field-meta.xml
<CustomField>
    <fullName>BuySellType__c</fullName>
    <label>Buy / Sell Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Store</fullName>
            </value>
            <value>
                <fullName>Whole Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>