unpackaged/main/default/objects/Account/fields/Bypass_Out_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Out_of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, do not check the Out of Business checkbox. This is used to avoid setting the Account to Out of Business.</description>
    <label>Bypass Out of Business</label>
    <type>Checkbox</type>
</CustomField>