unpackaged/main/default/objects/Account/fields/Composite_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Composite_Nickname__c</fullName>
    <label>Composite Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>