unpackaged/main/default/objects/Account/fields/Conga_Sent__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sent__c</fullName>
    <description>Temporary Field for feedback on Conga sent from the account.</description>
    <label>Conga Sent</label>
    <type>Date</type>
</CustomField>