unpackaged/main/default/objects/Account/fields/Dealerships_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Dealerships_in_Hierarchy__c</fullName>
    <label>Dealerships in Hierarchy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>