unpackaged/main/default/objects/Account/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <description>Dealer Managerment System</description>
    <inlineHelpText>Dealer Management System (put additional DMS system information in notes)</inlineHelpText>
    <label>DMS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DMS</valueSetName>
    </valueSet>
</CustomField>