unpackaged/main/default/objects/Account/fields/DMS_Text_Code__c.field-meta.xml
<CustomField>
    <fullName>DMS_Text_Code__c</fullName>
    <label>DMS (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>