unpackaged/main/default/objects/Account/fields/Do_not_Include_in_Collections__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Include_in_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Include in Collections</label>
    <type>Checkbox</type>
</CustomField>