unpackaged/main/default/objects/Account/fields/Do_Not_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not prospect anyone at this dealership</inlineHelpText>
    <label>Do Not Prospect</label>
    <type>Checkbox</type>
</CustomField>