unpackaged/main/default/objects/Account/fields/DPS_Activities_Report__c.field-meta.xml
<CustomField>
    <fullName>DPS_Activities_Report__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/00OS6000002i0xdMAA/view?queryScope=userFolders&amp;fv0=&quot; + Id, &quot;Go to Report&quot;)</formula>
    <label>DPS Activities Report</label>
    <type>Text</type>
</CustomField>