unpackaged/main/default/objects/Account/fields/DPS_Trainer__c.field-meta.xml
<CustomField>
    <fullName>DPS_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Digital Performance Solutions assigned to the account</description>
    <label>DPS Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>