unpackaged/main/default/objects/Account/fields/Driving_Sales_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Driving_Sales_Opt_In_Date__c</fullName>
    <label>Driving Sales - Opt-In Date</label>
    <type>Date</type>
</CustomField>