unpackaged/main/default/objects/Account/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Buy / Sell Effective Date</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>