unpackaged/main/default/objects/Account/fields/Finance_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_ID__c</fullName>
    <formula>c2g__CODAFinanceContact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Contact ID</label>
    <type>Text</type>
</CustomField>