unpackaged/main/default/objects/Account/fields/Finance_Contact_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact_Read_Only__c</fullName>
    <formula>c2g__CODAFinanceContact__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Contact (Read Only)</label>
    <type>Text</type>
</CustomField>