unpackaged/main/default/objects/Account/fields/Foundation_Direct_Id__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Direct_Id__c</fullName>
    <description>If this customer was brought to NCM by our partnership with FoundationDirect, an ID is placed here.</description>
    <inlineHelpText>If this customer was brought to NCM by our partnership with FoundationDirect, an ID is placed here.</inlineHelpText>
    <label>Foundation Direct Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>