unpackaged/main/default/objects/Account/fields/Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID__c</fullName>
    <description>Used for Intranet links (legacy system) - May be removed once Intranet is sunset.</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for Intranet links (legacy system) - May be removed once Intranet is sunset.</inlineHelpText>
    <label>Hotel ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>