unpackaged/main/default/objects/Account/fields/Hotel_Travel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Travel_Code__c</fullName>
    <description>This is the Sabre hotel code entered by Travel</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Sabre hotel code entered by Travel</inlineHelpText>
    <label>Hotel Travel Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>