unpackaged/main/default/objects/Account/fields/Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified__c</fullName>
    <description>Date account was last verified</description>
    <inlineHelpText>Enter the date the account was verified</inlineHelpText>
    <label>Last Verified</label>
    <type>Date</type>
</CustomField>