unpackaged/main/default/objects/Account/fields/Load_Switch__c.field-meta.xml
<CustomField>
    <fullName>Load_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load Switch (Code)</label>
    <type>Checkbox</type>
</CustomField>