unpackaged/main/default/objects/Account/fields/Manufacturer_ID__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_ID__c</fullName>
    <label>Manufacturer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>