unpackaged/main/default/objects/Account/fields/Marketo_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Shipping_State__c</fullName>
    <description>Used for Marketo integration - Marketo is incapable of breaking out Shipping Address</description>
    <label>Marketo Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>