unpackaged/main/default/objects/Account/fields/Marketo_Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Shipping_Zip_Code__c</fullName>
    <description>Used for Marketo integration - Marketo is incapable of breaking out Shipping Address</description>
    <label>Marketo Shipping Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>