unpackaged/main/default/objects/Account/fields/NCMI_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>NCMI_Client_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field for WinMasters integration to evaulate if the account has NCMi services</description>
    <label>NCMI Client (Code)</label>
    <type>Checkbox</type>
</CustomField>