unpackaged/main/default/objects/Account/fields/Number_of_Dealerships_in_Hierarcy__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dealerships_in_Hierarcy__c</fullName>
    <label>Number of Dealerships in Hierarcy</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>