unpackaged/main/default/objects/Account/fields/Number_of_dealerships_on_axcessa__c.field-meta.xml
<CustomField>
    <fullName>Number_of_dealerships_on_axcessa__c</fullName>
    <label>Number of dealerships on axcessa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>