unpackaged/main/default/objects/Account/fields/OEM_Pricing__c.field-meta.xml
<CustomField>
    <fullName>OEM_Pricing__c</fullName>
    <description>To confirm what special rate an account has been assigned</description>
    <label>OEM Pricing</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>