unpackaged/main/default/objects/Account/fields/OEM_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>OEM_Termination_Date__c</fullName>
    <label>OEM Termination Date</label>
    <type>Date</type>
</CustomField>