unpackaged/main/default/objects/Account/fields/OnDemand_Client__c.field-meta.xml
<CustomField>
    <fullName>OnDemand_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnDemand Client</label>
    <type>Checkbox</type>
</CustomField>