unpackaged/main/default/objects/Account/fields/OOB_Bar__c.field-meta.xml
<CustomField>
    <fullName>OOB_Bar__c</fullName>
    <formula>IF( Out_of_Business__c ,IMAGE( &quot;https://c.na11.content.force.com/servlet/servlet.ImageServer?id=015G0000001KHY8&amp;oid=00D760000004cfb&amp;lastMod=1322495112000&quot;, &quot;Out Of Business&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OOB Bar</label>
    <type>Text</type>
</CustomField>