unpackaged/main/default/objects/Account/fields/Opt_Out_Financial__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Financial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out - Financial</label>
    <type>Checkbox</type>
</CustomField>