unpackaged/main/default/objects/Account/fields/Outstanding_Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoice_URL__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;QueryId=[CA1]a0S4A00000TcEXvUAN&quot; +
&quot;&amp;EmailLetterheadId=0164A000000TULl&quot; +
&quot;&amp;CongaEmailTemplateId=a0R4A00000wOds2UAC&quot; +
&quot;&amp;ContactId=&quot; + c2g__CODAFinanceContact__c +
&quot;&amp;EmailFromID=0D24A000000TQ3E&quot; +
&quot;&amp;QMode=SendEmail&quot; +
&quot;&amp;UF0=1&quot; +
&quot;&amp;MFTS0=Conga_Sent__c&quot; +
&quot;&amp;MFTSValue0=&quot; + TEXT( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Invoice URL</label>
    <type>Text</type>
</CustomField>