unpackaged/main/default/objects/Account/fields/Parent_Account_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Do_Not_Call__c</fullName>
    <formula>Parent.Do_Not_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Do Not Call</label>
    <type>Checkbox</type>
</CustomField>