unpackaged/main/default/objects/Account/fields/PO_Box_City__c.field-meta.xml
<CustomField>
    <fullName>PO_Box_City__c</fullName>
    <label>PO Box City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>