unpackaged/main/default/objects/Account/fields/PO_Box_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PO_Box_Postal_Code__c</fullName>
    <label>PO Box Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>