unpackaged/main/default/objects/Account/fields/Primary_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>