unpackaged/main/default/objects/Account/fields/Primary_Payable_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Payable Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Accounts (Primary Payable Account)</relationshipLabel>
    <relationshipName>Primary_Payable_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>