unpackaged/main/default/objects/Account/fields/Tent_Card_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Tent_Card_Nickname__c</fullName>
    <label>Tent Card Nickname</label>
    <length>20</length>
    <type>Text</type>
</CustomField>