unpackaged/main/default/objects/Account/fields/Ultimate_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Account_ID_18_Text_Code__c,
  IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Account_ID_18_Text_Code__c,
    IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Account_ID_18_Text_Code__c,
      IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Account_ID_18_Text_Code__c,
        IF(NOT(ISBLANK(Parent.Name)), Parent.Account_ID_18_Text_Code__c,
          Account_ID_18_Text_Code__c
        )
      )
    )
  )
)</formula>
    <label>Ultimate Parent Account Id</label>
    <type>Text</type>
</CustomField>