unpackaged/main/default/objects/Account/fields/Ultimate_Parent_Account_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_ID_Text__c</fullName>
    <label>Ultimate Parent Account ID Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>