unpackaged/main/default/objects/Account/fields/Validated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Validated_Account_Name__c</fullName>
    <description>Admin enters legal entity name here</description>
    <inlineHelpText>Admin enters legal entity name here</inlineHelpText>
    <label>Validated Account Name</label>
    <length>73</length>
    <type>Text</type>
</CustomField>