unpackaged/main/default/objects/Account/recordTypes/Hotel.recordType-meta.xml
<RecordType>
    <fullName>Hotel</fullName>
    <active>true</active>
    <description>Hotels NCM may use for Engagements</description>
    <label>Hotel</label>
</RecordType>