unpackaged/main/default/objects/Account/recordTypes/NCM_Client.recordType-meta.xml
<RecordType>
    <fullName>NCM_Client</fullName>
    <active>true</active>
    <description>NCM Client Account Record</description>
    <label>NCM Client</label>
</RecordType>