unpackaged/main/default/objects/Account/recordTypes/NCM_Cooperative.recordType-meta.xml
<RecordType>
    <fullName>NCM_Cooperative</fullName>
    <active>true</active>
    <label>20G</label>
</RecordType>