unpackaged/main/default/objects/Account/recordTypes/NCM_Corporation.recordType-meta.xml
<RecordType>
    <fullName>NCM_Corporation</fullName>
    <active>true</active>
    <label>NCM Corporation</label>
</RecordType>