unpackaged/main/default/objects/Account/recordTypes/NCM_Invalid.recordType-meta.xml
<RecordType>
    <fullName>NCM_Invalid</fullName>
    <active>true</active>
    <label>NCM Invalid</label>
</RecordType>