unpackaged/main/default/objects/Account/recordTypes/NCM_Management_Group.recordType-meta.xml
<RecordType>
    <fullName>NCM_Management_Group</fullName>
    <active>true</active>
    <label>NCM Management Group</label>
</RecordType>