unpackaged/main/default/objects/Account/recordTypes/NCM_OEM.recordType-meta.xml
<RecordType>
    <fullName>NCM_OEM</fullName>
    <active>true</active>
    <description>OEM client accounts</description>
    <label>NCM OEM</label>
</RecordType>