unpackaged/main/default/objects/Account/recordTypes/NCM_Vendor.recordType-meta.xml
<RecordType>
    <fullName>NCM_Vendor</fullName>
    <active>true</active>
    <description>NCM Vendor Record</description>
    <label>NCM Vendor</label>
</RecordType>