unpackaged/main/default/objects/Account/recordTypes/Out_Of_Business.recordType-meta.xml
<RecordType>
    <fullName>Out_Of_Business</fullName>
    <active>true</active>
    <description>Used for Out of Business</description>
    <label>Out Of Business</label>
</RecordType>