unpackaged/main/default/objects/Account/validationRules/Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name</fullName>
    <active>false</active>
    <description>Rule that makes the Account Name automatically go to all upper case letters.</description>
    <errorConditionFormula>Name  &lt;&gt;  UPPER(Name)</errorConditionFormula>
    <errorMessage>Please enter this value in upper case form</errorMessage>
</ValidationRule>