unpackaged/main/default/objects/Account/validationRules/Account_Type_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Cannot_Be_Edited</fullName>
    <active>true</active>
    <description>The Type can only be changed on Parent Accounts by a System Administrator.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(ParentId)), 
 ISCHANGED(Type),
 TEXT(Type) &lt;&gt; TEXT(Parent.Type),
 OR(
   $Profile.Name &lt;&gt; &#39;System Administrator&#39;,
   NOT($Permission.Account_Edit_Type_Field)
 )
)</errorConditionFormula>
    <errorMessage>The Type can only be changed on Parent Accounts by a System Administrator.</errorMessage>
</ValidationRule>