unpackaged/main/default/objects/Account/validationRules/Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISNULL(BillingStreet),
    ISNULL(BillingCity), 
    ISNULL(BillingState), 
    ISNULL(BillingCountry), 
    ISNULL(BillingPostalCode)
)</errorConditionFormula>
    <errorMessage>A full address is required. Ensure all the following fields are populated: Street, City, State, Postal Code, &amp; Country</errorMessage>
</ValidationRule>