unpackaged/main/default/objects/Account/validationRules/Mandatory_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Industry</fullName>
    <active>false</active>
    <description>Force Industry field to be filled in</description>
    <errorConditionFormula>ISPICKVAL( Industry, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Please select an Industry</errorMessage>
</ValidationRule>